Startpage: Fix the reaction when user input nothing

--- a/linkto.css
+++ b/linkto.css
@@ -14,7 +14,7 @@ a {
     float: left;
 }
 .linkto:hover {
-    background-color: #dfdfdf;
+    background-color: #e8e8e8;
 }
 .linkto-img {
     height: 30px;
