Startpage: Add settings
And move everything downwards, set Live2D behind text

--- a/files/linkto.css
+++ b/files/linkto.css
@@ -9,7 +9,7 @@ a {
     height: 70px;
     width: 10%;
     border-radius: 5px;
-    background-color: #ffffff;
+    background-color: inherit;
     text-align: center;
     float: left;
 }
