--- a/files/search.css
+++ b/files/search.css
@@ -13,12 +13,14 @@
 .searchbutton {
     height: 30px;
     width: 70px;
-    background-color: #68e8bd;
+    /* background-color: #68e8bd;
     border: 3px solid #68e8bd;
     border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
+    border-bottom-right-radius: 5px; */
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
 }
-.searchbutton:hover {
+/* .searchbutton:hover {
     background-color: #48c89d;
     border: 3px solid #48c89d;
-}
+} */
